infrastructure/longhorn/networkpolicyprom.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-manager-prometheus
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  podSelector:
    matchLabels:
      app: longhorn-manager

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9500
